# itfp

./: .gitignore  LICENSE  README.md
step0/: bash.ipynb
step0/.ipynb_checkpoints/: bash-checkpoint.ipynb
step1/: gaus2d  gaus2d.cpp
step1/data/: analysis.ipynb  data.csv
step1/data/.ipynb_checkpoints/: analysis-checkpoint.ipynb
step1a/: CMakeLists.txt  compile.sh
step2/: README.md  gaus2d.cpp
step2a/: CMakeLists.txt  README.md  gaus2d  gaus2dgen.cpp  gaus2dgen.h
step3a/: CMakeLists.txt  README.md  compile.sh  gaus2d.cpp
step3a/gaus2ddir/: CMakeLists.txt
step4a/: CMakeLists.txt  README.md
step4a/random/: CMakeLists.txt
step5a/: CMakeLists.txt  README.md  compile.sh  gaus2d.cpp  sigbg.root
step5a/gaus2ddir/: CMakeLists.txt  gaus2dgen.cpp  gaus2dgen.h
step5a/random/: random.cpp  random.h
